manyfold/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: manyfold
  name: manyfold
spec:
  finalizers:
    - kubernetes
