manyfold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
  labels:
    app: manyfold
spec:
  selector:
    app: manyfold
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3214
