manyfold/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manyfold
  namespace: manyfold
  labels:
    app: manyfold
spec:
  rules:
    - host: manyfold.drhack.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: manyfold
                port:
                  number: 80
